style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

body {
  font-family: 'Inter', Sans-Serif !important;
}

h1 {
  color: white;
  font-size: 2px;
}

h2 {
  font-size: 48px;
  font-weight: 700;
  margin-top: 48px;
}

#survey {
  background-color: #800000;
  padding: 20px;
  font-size: 14px;
  margin: 20px 30%;
  width: 20vw;
  border: none;
  border-radius: 10px;
}

#button-link, #button-link:hover, #button-link:focus, #button-link:active {
  color: white;
}

.callout {
  background-color: #FFE0C0;
  padding: 30px;
  border-radius: 10px;
  font-size: 20px;
  font-weight: 800;
  margin: 20px 10px;
  line-height: 18px;
}

.callout-text {
  font-weight: 600;
  line-height: 36px;
}

